--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -479,7 +479,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-9w-eI5">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-9w-eI5">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -496,10 +496,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="KTD-9w-eI5" secondAttribute="trailing" constant="-20" id="G6f-Aa-T6E"/>
-                            <constraint firstItem="KTD-9w-eI5" firstAttribute="leading" secondItem="Dkg-iW-42Q" secondAttribute="leadingMargin" constant="-20" id="iYm-Ug-WUX"/>
-                            <constraint firstItem="c9q-af-MgP" firstAttribute="top" secondItem="KTD-9w-eI5" secondAttribute="bottom" id="u7z-FS-NFd"/>
-                            <constraint firstItem="KTD-9w-eI5" firstAttribute="top" secondItem="Dkg-iW-42Q" secondAttribute="topMargin" id="z1J-DK-NIK"/>
+                            <constraint firstItem="KTD-9w-eI5" firstAttribute="leading" secondItem="Dkg-iW-42Q" secondAttribute="leadingMargin" constant="-20" id="Pyd-em-WcU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KTD-9w-eI5" secondAttribute="trailing" constant="-20" id="pjD-et-5CE"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="High Scores" image="highscores" id="20q-d6-q0v" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
@@ -514,7 +512,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TtD-xX-6Hm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <customObject id="OpE-9d-8Pc" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
             </objects>
-            <point key="canvasLocation" x="2906" y="-480"/>
+            <point key="canvasLocation" x="2898" y="-459"/>
         </scene>
         <!--Settings-->
         <scene sceneID="d5t-Pc-IUK">
